Safe commit (Trying to create multiple packages for a single destination)